fixed image stretch bug

--- a/app/assets/stylesheets/components/_components.scss
+++ b/app/assets/stylesheets/components/_components.scss
@@ -248,7 +248,7 @@ blockquote {
 }
 figure {
   margin: 0;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
 }
 figcaption {
   margin-top: 5px;
